# oracle-license-manager

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_processor_core_factors.py  0003_catalog_products.py  0004_backfill_reference_data.py  0005_repair_processor_host_columns.py  0006_host_entitlements.py  0007_remove_host_agreement_link.py  0008_host_product_assignments.py  0009_host_license_type.py  0010_host_named_users_required.py  0011_oracle_processor_core_factors.py  0012_normalize_enum_values.py  0013_link_to_catalog_product_id.py
backend/scripts/: parse_oracle_price_list.py  seed_demo_data.py
backend/scripts/echarts-renderer/: package-lock.json  package.json  render.mjs
backend/src/license_tracker/: __init__.py  config.py  main.py
backend/src/license_tracker/api/: deps.py
backend/src/license_tracker/charts/: __init__.py  report_options.py
backend/src/license_tracker/collectors/: __init__.py  base.py  ssh.py
backend/src/license_tracker/db/: engine.py  mappers.py  migrate.py  reference_data.py  seed.py  session.py
backend/src/license_tracker/domain/: enums.py  license_calc.py  license_type.py
backend/src/license_tracker/models/: __init__.py  agreement_compliance.py  catalog_product_create.py  (+27 more)
backend/tests/: __init__.py  conftest.py  test_api.py  test_engine.py  test_license_calc.py  test_mappers.py  test_metadata.py  test_migrate.py  test_reference_data.py  test_report_charts.py  test_report_options.py  test_report_pdf.py
(+84 files in other folders)
