[tool.uv.workspace]
members = ["backend"]

[project]
name = "oracle-ilcense-tracking"
version = "0.4.0"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
docs = [
    "loguru>=0.7.0",
    "mkdocs>=1.6",
    "mkdocs-material[imaging]>=9.5",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "mkdocs-material[imaging]>=9.7.6",
]
