[project]
name = "license-tracker"
version = "0.4.0"
description = "Oracle license tracking API"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "fpdf2>=2.8.7",
    "loguru>=0.7.0",
    "oracledb>=2.5.0",
    "pydantic-settings>=2.6.0",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/license_tracker"]

[tool.hatch.build.targets.wheel.force-include]
"src/license_tracker/assets" = "license_tracker/assets"

[project.scripts]
license-tracker-api = "license_tracker.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
